# secretprime

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  secretprime.cabal  stack.yaml  test.sh
client/: Main.hs
client/Prime/Client/: Monad.hs
server/: Main.hs
src/Prime/: Secret.hs
src/Prime/Secret/: Cipher.hs  Client.hs  Keys.hs  Password.hs  Signing.hs
src/Prime/Servant/: Client.hs  Models.hs  Monad.hs  PrimeApi.hs  Session.hs  Time.hs
src/Prime/Servant/PrimeApi/: Enroll.hs  Sharing.hs
