name:                secretprime
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/NicolasDP/secretprime#readme
license:             BSD3
license-file:        LICENSE
author:              Nicolas Di Prima
maintainer:          nicolas@primetype.co.uk
copyright:           Prime Type Ltd
category:            Crypto
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prime.Secret
  other-modules:       Prime.Secret.Cipher
                       Prime.Secret.Client
                       Prime.Secret.Keys
                       Prime.Secret.Password
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , memory, bytestring, binary
                     , cryptonite, pvss
                     , aeson
  ghc-options:         -Wall -fwarn-tabs
  Default-Extensions:  NoImplicitPrelude
                       TypeFamilies
                       BangPatterns
                       DeriveDataTypeable
  if impl(ghc >= 8.0)
    ghc-options: -Wno-redundant-constraints
  default-language:    Haskell2010

executable secretprime-cli
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pem
                     , haskeline
                     , foundation
                     , memory, bytestring
                     , secretprime
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NicolasDP/secretprime
