name:                secretprime
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/NicolasDP/secretprime#readme
license:             BSD3
license-file:        LICENSE
author:              Nicolas Di Prima
maintainer:          nicolas@primetype.co.uk
copyright:           Prime Type Ltd
category:            Crypto
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prime.Secret
  other-modules:       Prime.Secret.Cipher
                       Prime.Secret.Client
                       Prime.Secret.Keys
                       Prime.Secret.Password
                       Prime.Secret.Signing
  exposed-modules:     Prime.Servant.Monad
                       Prime.Servant.Api
  exposed-modules:     Prime.Servant.Time
                       Prime.Servant.Models
                       Prime.Servant.Session
                       Prime.Servant.Client
                       Prime.Servant.PrimeApi
                       Prime.Servant.PrimeApi.Enroll
                       Prime.Servant.PrimeApi.Login
                       Prime.Servant.PrimeApi.Sharing
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , memory, bytestring, binary, text
                     , cryptonite, pvss
                     , aeson
                     , mtl
                     , servant, servant-server, servant-docs, servant-js
                     , servant-auth-cookie, servant-client
                     , data-default, exceptions
                     , wai, http-types
                     , persistent, persistent-template
                     , esqueleto
                     , monad-logger
                     , hourglass, time
                     , filepath, directory
  ghc-options:         -Wall -fwarn-tabs
  Default-Extensions:  NoImplicitPrelude
                       TypeFamilies
                       BangPatterns
                       DeriveDataTypeable
  if impl(ghc >= 8.0)
    ghc-options: -Wno-redundant-constraints
  default-language:    Haskell2010

Flag mysql
  Description: add support for MySQL to the server
  Default:     False
  Manual:      True

executable secretprime-server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , foundation
                     , memory, bytestring
                     , cryptonite
                     , secretprime
                     , servant, servant-server
                     , warp
                     , string-conversions, monad-logger
                     , persistent
                     , persistent-sqlite
  if flag(mysql)
    build-depends:     persistent-mysql
    CPP-options:       -DWITH_MySQL
  default-language:    Haskell2010

executable secretprime-cli
  hs-source-dirs:      client
  main-is:             Main.hs
  other-modules:       Prime.Client.Monad
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pem
                     , haskeline
                     , foundation
                     , memory, bytestring
                     , secretprime, persistent
                     , servant, servant-client, http-client
                     , servant-auth-cookie
                     , mtl, transformers
                     , directory
                     , http-api-data
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NicolasDP/secretprime
